[package]
name = "polkadot"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = "0.11"
polkadot-cli = { path = "cli", version = "0.1" }
polkadot-network = { path = "network" }

[workspace]
members = [
	"candidate-agreement",
	"client",
	"collator",
	"environmental",
	"executor",
	"native-runtime",
	"primitives",
	"rpc-servers",
	"rpc",
	"runtime-codec",
	"runtime-std",
	"serializer",
	"state-machine",
	"validator",
	"network",
]
exclude = [
	"wasm-runtime"
]
